--- a/gb/20/10/7/n12460002.md
+++ b/gb/20/10/7/n12460002.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ryrnnu318/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ryrnnu318/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ryrnnu318/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ryrnnu318/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ryrnnu318/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ryrnnu318/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ryrnnu318/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ryrnnu318/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ryrnnu318/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ryrnnu318/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ryrnnu318/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ryrnnu318/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ryrnnu318/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ryrnnu318/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ryrnnu318/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ryrnnu318/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ryrnnu318/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ryrnnu318/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ryrnnu318/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ryrnnu318/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ryrnnu318/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ryrnnu318/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ryrnnu318/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ryrnnu318/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【薇羽看世间】解读美新规 移民美国还能实现？</h2>
-<a href="https://git.io/JUhSB"><img width="600" src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ryrnnu318/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>【薇羽看世间】解读美新规 移民美国如何实现？</h2>
+<a href="https://d2oemtubh889hy.cloudfront.net/T7xTx1Jnn"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>近日美国媒体报导，海外出现一股退党风潮，越来越多中国大陆移民通过各种方式办理退出中共组织的声明。（大纪元合成）
 </h6>
 <hr>
-	<p>【大纪元2020年10月07日讯】大家好，这里是《<ahref="https://github.com/ryrnnu318/djy/blob/master/gb/tag/%E8%96%87%E7%BE%BD%E7%9C%8B%E4%B8%96%E9%97%B4.md#1">薇羽看世间</a>》，我是陈薇羽。</p>
-<p>最近有个话题我觉得要拿出来说一下，就是关于美国禁止中共党员及附属组织成员<ahref="https://github.com/ryrnnu318/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91.md#1">移民</a>美国。我想在今天的节目里详细说一下这个话题。到底哪些人会成为被拒对象，哪些人不属于这个范围，是属于特例，或者可以申请豁免，最明智的做法是什么。今天我们都来详细说说。</p>
-<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://git.io/JUhSB"><img width="600" src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ryrnnu318/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/rg3qAZ9hlTY?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
+	<p>【大纪元2020年10月07日讯】大家好，这里是《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%96%87%E7%BE%BD%E7%9C%8B%E4%B8%96%E9%97%B4.md#1">薇羽看世间</a>》，我是陈薇羽。</p>
+<p>最近有个话题我觉得要拿出来说一下，就是关于美国禁止中共党员及附属组织成员<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91.md#1">移民</a>美国。我想在今天的节目里详细说一下这个话题。到底哪些人会成为被拒对象，哪些人不属于这个范围，是属于特例，或者可以申请豁免，最明智的做法是什么。今天我们都来详细说说。</p>
+<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://d2oemtubh889hy.cloudfront.net/T7xTx1Jnn"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/rg3qAZ9hlTY?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
 	</div>
 <p>最近刚好民运人士杨建利入籍美国被拒，也在网上传得沸沸扬扬。我们先来听听他的经历。据杨建利自己的叙述，他是1986年公费到美国留学，出来以前，公职人员申请美国签证的时候，国家机关外事部门要给予培训和指导，其中一项指导就是“不要在申请表上承认共产党员的身份”，当时他被警告“一旦承认党员身份就会拿不到签证”，所以，他就跟其他人一样，隐瞒了自己是中共党员的身份。</p>
 <p>1989年他回国参加了六四学运，又逃回美国，申请了政治庇护，开始在海外进行推动中国民主化运动。他觉得以中国公民身份来做这些事情更有说服力，就几次放弃了入籍美国的机会。但他同时也没有办法续签中国护照，他上了中共拒绝入境的49人黑名单。这样没有国籍的身份给他外出旅行带来了麻烦。</p>
-<p>去年3月份，他因为没有国籍被拒绝进入联合国大厦，他每年都会去日内瓦参加人权与民主峰会，以前都不会有这个问题，去年开始，新规定与会人员必须持有联合国成员国护照，因为这个原因，他决定入籍美国。在申请入籍的过程中，他跟<ahref="https://github.com/ryrnnu318/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91.md#1">移民</a>局人员坦言自己曾经隐瞒了是中共党员的历史。</p>
+<p>去年3月份，他因为没有国籍被拒绝进入联合国大厦，他每年都会去日内瓦参加人权与民主峰会，以前都不会有这个问题，去年开始，新规定与会人员必须持有联合国成员国护照，因为这个原因，他决定入籍美国。在申请入籍的过程中，他跟<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91.md#1">移民</a>局人员坦言自己曾经隐瞒了是中共党员的历史。</p>
 <p>当然如果他继续隐瞒，以后一旦被查出来，他会更麻烦。不过，因为他曾经隐瞒，美国移民局根据刚刚公布的新规定，拒绝了他的入籍申请。当然他还会通过后续的上诉去争取，毕竟他作为民运人士，常年都有公开反共活动，我相信他会被豁免。</p>
 <p>但是从他的遭遇，我们至少看到，美国移民局是认真对待这个新规定的。我们都知道美国以前就有这个规定，但是一直都很难执行，移民申请表格上，只要申请人填了不是共产党员，基本就没事了。</p>
 <p>最近这个规定其实是一个强化的意思，对那些中共党员或者其它组织，比如共青团、工商联、总工会、妇联等等这样的组织成员都会特别审查，拒绝移民美国。这些规定要怎么执行，其实就看美国政府的决心，决定要做就有办法做到，政策怎么执行，完全取决于决策者的态度。</p>
@@ -32,8 +32,8 @@
 <p>最近美国之音也报导，出现一股退党风潮，越来越多中国大陆移民通过各种方式办理退出中共组织的声明。我们也知道，这里面一定是鱼龙混杂，很多是为了保留美国的居留权。</p>
 <p>不过，我还是觉得，应该给这样的机会，毕竟愿意退出中共组织，就说明他能权衡利弊，迈出了放弃中共的第一步。我听说有些人是选择放弃美国国籍，回中国去了。这部分人，我们肯定是非常乐意地说，好走不送。但也同时对比出，那些愿意选择退出中共的人，还是有希望改变的。</p>
 <p>不过，我建议，有良知的中国人趁早选择退出中共的组织，越早越好。从两个方面来说吧，美国有这个五年前退出中共的政策，所以越早退出，将来要移民美国就已经做好准备了；另一方面，退出中共是否真心，还真的从退出时间上可以看出来。</p>
-<p>大家应该都听说过，大纪元媒体在推出《九评共产党》这本书之后，法轮功学员就在全球开始传阅九评，发起<ahref="https://github.com/ryrnnu318/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>活动。应该是从2004年开始，就已经在呼吁中国人退党，退团，退队。</p>
-<p>到现在已经有16年了吧，根据大纪元网站上的统计，差不多有3亿6千5百多万人做了<ahref="https://github.com/ryrnnu318/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>。有人说这个数字不可能，说中共党员才9191.4万，现在大家应该知道了，这个数字是包含所有中共附属组织的，说中共国14亿人每个人都是那个组织里的，也都不为过。</p>
+<p>大家应该都听说过，大纪元媒体在推出《九评共产党》这本书之后，法轮功学员就在全球开始传阅九评，发起<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>活动。应该是从2004年开始，就已经在呼吁中国人退党，退团，退队。</p>
+<p>到现在已经有16年了吧，根据大纪元网站上的统计，差不多有3亿6千5百多万人做了<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>。有人说这个数字不可能，说中共党员才9191.4万，现在大家应该知道了，这个数字是包含所有中共附属组织的，说中共国14亿人每个人都是那个组织里的，也都不为过。</p>
 <p>所以，3亿多人退出来其实比例并不是太高，但是这部分退出来的人，我觉得质量就会比较高。你想啊，那时候，还没有美国禁止中共成员入境这回事，中国人选择退出中共组织为了什么？至少不是为了移民美国这样的目的。他们几乎都是对中共没有好感，不想跟中共为伍的人，才会做出这种决定要退出来。</p>
 <p>不得不说，法轮功学员发起的三退运动是非常有远见的。对很多中国人来说，是一种救赎。从外在形式上看，早早退出的人，现在至少不在美国制裁范围之列。实际上，退出中共组织还有更深的内涵。信仰基督教的人可能都知道圣经启示录中的兽印666。</p>
 <p>关于这个兽印666的解读有很多不同的版本，有人说这个是反基督的密码，我还听过一个版本是说芯片植入人体的阴谋，关于这个说法我下次有时间跟大家再讨论。今天跟大家说说另一个版本。</p>
@@ -48,7 +48,7 @@
 <p>这个解读，就能解释中共为什么这些年迅速崛起，却给全世界带来灾难。其实都是有原因的。而灭共是人类唯一的出路，对中共国的人来说，在退党的生命册上留下自己的名字，才能最终得到救赎，否则，这只兽最终是想将人类拉入火湖，永远受煎熬。</p>
 <p>我不知道，我讲的这些对大家来说，会不会太玄幻。其实有信仰的人，是不会觉得奇怪的，只有无神论才会接受不了，而这也正是共产主义的终极目的，让人都变成无神论，无法接受被救赎的理由，人最终就会被毁灭。</p>
 <p>我还是希望，不论大家是否相信，尤其是中国大陆出来的，哪怕你反共，都不要忽略这样的一个程序，都能将自己的名字放在生命册上，真正的得到平安，得到神的护佑！</p>
-<p>好，今天薇羽很高兴能跟大家说这些，希望大家能感受到我的用心良苦。<ahref="https://github.com/ryrnnu318/djy/blob/master/gb/tag/%E8%96%87%E7%BE%BD%E7%9C%8B%E4%B8%96%E9%97%B4.md#1">薇羽看世间</a>，我们明天见！</p>
+<p>好，今天薇羽很高兴能跟大家说这些，希望大家能感受到我的用心良苦。<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%96%87%E7%BE%BD%E7%9C%8B%E4%B8%96%E9%97%B4.md#1">薇羽看世间</a>，我们明天见！</p>
 <p>《薇羽看世间》节目组</p>
 <p>（本视频只代表作者的观点和陈述）</p>
 <p>责任编辑：李昊#</p>
@@ -57,42 +57,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/8/13/n12328807.md#1">【薇羽看世间】没有微笑权利？美国媒体病了</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/8/14/n12331597.md#1">【薇羽看世间】不再称一尊 习梦断北戴河？</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/9/15/n12405529.md#1">【薇羽看世间】从加州野火到1619项目</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/9/16/n12408420.md#1">【薇羽看世间】被偷走的科技大奖</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/13/n12328807.md#1">【薇羽看世间】没有微笑权利？美国媒体病了</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/14/n12331597.md#1">【薇羽看世间】不再称一尊 习梦断北戴河？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/9/15/n12405529.md#1">【薇羽看世间】从加州野火到1619项目</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/9/16/n12408420.md#1">【薇羽看世间】被偷走的科技大奖</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/9/n10131106.md#1" target="_blank">林辉：北京四中老师们健忘背后的残酷真相</a></li><li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/30/n9092520.md#1" target="_blank">法轮大法洪传新西兰 20年点滴回顾</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10785014.md#1" target="_blank">共产暴政录：镇压“反革命”运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/20/n8510885.md#1" target="_blank">哈尔滨一位大学教师17年的坚持</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/3/n12450997.md#1">大千世界无奇不有 人死去百年竟能复活</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/9/21/n12420405.md#1">【成吉思汗】姻缘定 英雄聚 铁木真崛起</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/9/18/n12414341.md#1">为何编写淫书罪深重  刑罚无终了</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/9/30/n12441471.md#1">希腊神话故事教我们如何战胜恐惧</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/5/n12455352.md#1">【重播】左右交锋 美副总统候选人辩论会</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/7/n12459961.md#1">【珍言真语】潘东凯：主流媒体反川普 误导民众</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/7/n12460564.md#1">【新闻看点】彭贺提前对决2024？通俄门反调查</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/2/n12446632.md#1">【独家】朝鲜首爆氢弹 中共内部报告曝光</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/6/n12456305.md#1">【拍案惊奇】川普说出院是奇迹 习要当太上皇续权？</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/6/n12457692.md#1">胡锡进骂批评外交部言论的中国人“贱”惹众怒</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/6/n12458026.md#1">赵薇连输102场官司 将连带赔偿逾8千万元</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/5/n12455254.md#1">六年前大陆拍戏患怪病 吴孟达暴瘦近照曝光</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/5/n12455857.md#1">范冰冰确定复出 好莱坞新片《355》海报曝光</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/7/n12459794.md#1">李爱绮浴室重摔倒地不起 庆幸及时被发现送医</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/6/n12457902.md#1">日知名女星广濑铃染疫 拍戏大规模筛检惊确诊</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/6/n12456850.md#1">为什么F-22这么先进的战机仍配备机炮？</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/6/n12456347.md#1">美国农夫心脏病发作 60个邻居帮忙收割</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/5/n12453852.md#1">百年前珍贵画面：德国“会飞行的火车”</a></li>
-<li><a href="https://github.com/ryrnnu318/djy/blob/master/gb/20/10/7/n12458966.md#1">陈水扁曝：凯达格兰大道差点变玛丽莲梦路</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ryrnnu318/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ryrnnu318/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/7/n12460002.htm">【薇羽看世间】解读美新规 移民美国还能实现？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/7/n12460002.htm">【薇羽看世间】解读美新规 移民美国如何实现？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ryrnnu318/djy/blob/master/gb/20/10/7/n12460002.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ryrnnu318/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ryrnnu318/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ryrnnu318/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ryrnnu318/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryrnnu318/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/10/7/n12460002.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
